fix: not showing occlusion

--- a/rslib/src/image_occlusion/image_occlusion_styling.css
+++ b/rslib/src/image_occlusion/image_occlusion_styling.css
@@ -19,7 +19,7 @@
     position: relative;
 }
 
-#img {
+#image {
     position: absolute;
     top: 0;
     left: 50%;
